--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Backend for SkillSwap project",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
@@ -12,6 +13,7 @@
   "license": "MIT",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "bcryptjs": "^3.0.2",
     "cloudinary": "^1.37.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -27,7 +29,7 @@
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.3",
-    "eslint": "^8.50.0"
+    "eslint": "^8.50.0",
+    "nodemon": "^3.0.3"
   }
 }
