fix:DB connection

--- a/backend/.env
+++ b/backend/.env
@@ -3,20 +3,20 @@ PORT=5000
 NODE_ENV=development
 
 # --- MongoDB ---
-MONGO_URI=mongodb+srv://<username>:<password>@cluster0.mongodb.net/skillswap
+MONGO_URI=mongodb+srv://kratos:kratos123@cluster0.cexdoaf.mongodb.net
 
 # --- JWT (for authentication) ---
 JWT_SECRET=SkillSwapIndiaKratos321
 JWT_EXPIRE=30d
 
 # --- Cloudinary (for video/image uploads) ---
-CLOUDINARY_CLOUD_NAME=your_cloud_name
-CLOUDINARY_API_KEY=your_api_key
-CLOUDINARY_API_SECRET=your_api_secret
+CLOUDINARY_CLOUD_NAME=dg5g21yi0
+CLOUDINARY_API_KEY=353457341933982
+CLOUDINARY_API_SECRET=mqvpTIIhGsn689TtyXxGV0Hfz_I
 
 # --- Email Service (optional, if used for notifications or verification) ---
-EMAIL_USER=youremail@gmail.com
-EMAIL_PASS=your_email_app_password
+EMAIL_USER=karunanidhiayyamperumal@gmail.com
+EMAIL_PASS=pass
 
 # --- Frontend URL (for CORS / email links) ---
 CLIENT_URL=http://localhost:5173
